[package]
name = "nestix-native-appkit"
version = "0.1.0"
edition = "2024"

[dependencies]
block2 = "0.6.2"
nanoid = "0.4.0"
nestix = { git = "https://github.com/wirelesseye/nestix.git" }
nestix-native-core = { path = "../nestix-native-core", features = ["taffy"]}
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSDraggingItem", "NSDraggingSession", "NSFilePromiseProvider", "NSGestureRecognizer", "NSImageView", "NSLayoutConstraint", "NSOpenPanel", "NSPanGestureRecognizer", "NSPasteboard", "NSPasteboardItem", "NSPopUpButton", "NSSavePanel", "NSSlider", "NSSwitch"]}
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSData", "NSNotification", "NSURL"]}
taffy = "0.9.2"

[dev-dependencies]
env_logger = { version = "0.11.8" }
