[package]
name = "nestix-native-win32"
version = "0.1.0"
edition = "2024"

[dependencies]
nestix = { path = "../../nestix/nestix" }
nestix-native-core = { path = "../nestix-native-core", features = ["taffy"]}
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell_Common",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
taffy = "0.9.2"
