[package]
name = "nestix-native"
version = "0.1.0"
edition = "2024"

[dependencies]
nestix = { git = "https://github.com/wirelesseye/nestix.git" }
nestix-native-core = { path = "../nestix-native-core" }

[target.'cfg(target_os = "macos")'.dependencies]
nestix-native-appkit = { path = "../nestix-native-appkit" }

[target.'cfg(target_os = "windows")'.dependencies]
nestix-native-win32 = { path = "../nestix-native-win32" }
nestix-native-winui = { path = "../nestix-native-winui", optional = true }

[features]
winui = ["dep:nestix-native-winui"]
